--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
     <div class="absolute -bottom-24 -right-24 h-80 w-80 rounded-full bg-blue-200/40 blur-3xl"></div>
   </div>
 
-  <div class="mx-auto max-w-6xl px-4 py-10">
+  <div class="mx-auto max-w-6xl px-6 md:px-4 py-10">
     <div class="mb-6">
       <a href="index.html" class="inline-flex items-center gap-2 text-sm text-slate-600 hover:text-slate-800">
         <i data-lucide="arrow-left" class="w-4 h-4"></i>
