--- a/peserta.html
+++ b/peserta.html
@@ -43,7 +43,7 @@
         </ul>
 
         <!-- Burger -->
-        <button id="burgerBtn" class="md:hidden inline-flex items-center justify-center h-9 w-9 rounded-lg border hover:bg-slate-100" aria-controls="mobileMenu" aria-expanded="false" aria-label="Toggle menu">
+        <button id="burgerBtn" class="md:hidden inline-flex items-center justify-center h-11 w-11 rounded-lg border hover:bg-slate-100" aria-controls="mobileMenu" aria-expanded="false" aria-label="Toggle menu">
           <svg id="burgerIcon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 7h16M4 12h16M4 17h16"/>
           </svg>
@@ -54,7 +54,7 @@
       </div>
     </div>
     <!-- Mobile menu -->
-    <div id="mobileMenu" class="md:hidden hidden border-t bg-white">
+    <div id="mobileMenu" class="md:hidden hidden border-t bg-white transition-all duration-300">
       <div class="mx-auto max-w-6xl px-4 py-2">
         <ul class="flex flex-col gap-1 text-sm">
           <li><a href="index.html" class="block px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="home" class="w-5 h-5"></i>Home</a></li>
@@ -77,7 +77,7 @@
   </header>
 
   <!-- MAIN -->
-  <main class="mx-auto max-w-6xl px-4 py-6">
+  <main class="mx-auto max-w-6xl px-6 md:px-4 py-6">
     <!-- Filter -->
     <section id="filters" class="mb-4">
       <div class="rounded-2xl border bg-white p-4 md:p-5 shadow-sm grid grid-cols-1 md:grid-cols-3 gap-4">
@@ -216,6 +216,17 @@
       mobileMenu.classList.toggle('hidden');
       burgerIcon.classList.toggle('hidden');
       closeIcon.classList.toggle('hidden');
+    });
+
+    // Close menu when clicking on a link
+    const links = mobileMenu.querySelectorAll('a');
+    links.forEach(link => {
+      link.addEventListener('click', () => {
+        mobileMenu.classList.add('hidden');
+        burgerIcon.classList.remove('hidden');
+        closeIcon.classList.add('hidden');
+        burgerBtn.setAttribute('aria-expanded', 'false');
+      });
     });
 
     // Toggle Login/Logout
