--- a/pengujian.html
+++ b/pengujian.html
@@ -65,6 +65,7 @@
             <li><a href="dashboard.html" class="px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="layout-dashboard" class="w-4 h-4"></i>Dashboard</a></li>
             <li><a href="bimbingan.html" class="px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="users" class="w-4 h-4"></i>Bimbingan</a></li>
             <li><a href="pengujian.html" class="px-3 py-2 rounded-lg bg-emerald-600 text-white flex items-center gap-2"><i data-lucide="clipboard-check" class="w-4 h-4"></i>Pengujian</a></li>
+            <li><a href="sertifikat.html" class="px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="award" class="w-4 h-4"></i>Sertifikat</a></li>
           </ul>
           <button id="burgerBtn" class="md:hidden inline-flex items-center justify-center h-9 w-9 rounded-lg border hover:bg-slate-100" aria-label="Menu">
             <i data-lucide="menu" id="burgerIcon" class="w-5 h-5"></i>
@@ -105,6 +106,7 @@
         <li><a href="dashboard.html" class="block px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="layout-dashboard" class="w-5 h-5"></i>Dashboard</a></li>
         <li><a href="bimbingan.html" class="block px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="users" class="w-5 h-5"></i>Bimbingan</a></li>
         <li><a href="pengujian.html" class="block px-3 py-2 rounded-lg bg-emerald-600 text-white flex items-center gap-2"><i data-lucide="clipboard-check" class="w-5 h-5"></i>Pengujian</a></li>
+        <li><a href="sertifikat.html" class="block px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="award" class="w-5 h-5"></i>Sertifikat</a></li>
       </ul>
     </div>
   </div>
@@ -628,4 +630,3 @@
   <script>try{ var yEl=document.getElementById('year'); if(yEl){ yEl.textContent = new Date().getFullYear(); } }catch(e){}</script>
 </body>
 </html>
-
