--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
     }
     .slideshow-container-mobile img {
       width: 100%;
-      height: 200px;
+      height: 180px;
       object-fit: cover;
       display: none;
     }
     @media (min-width: 480px) {
       .slideshow-container-mobile img {
-        height: 250px;
+        height: 260px;
       }
     }
     .slideshow-container-mobile img.active {
@@ -148,7 +148,7 @@
     }
     .slideshow-dots-mobile {
       text-align: center;
-      padding: 8px;
+      padding: 10px;
     }
 
     /* Skeleton Loader */
@@ -262,9 +262,9 @@
 
   <header class="relative overflow-hidden hero-decor bg-grid bg-sky-50 border-b">
 
-    <div class="mx-auto max-w-6xl px-3 sm:px-4 py-8 sm:py-12 md:py-16 text-center">
+    <div class="mx-auto max-w-6xl px-3 sm:px-4 py-6 sm:py-10 md:py-14 text-center">
 
-      <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold tracking-tight text-sky-800 animate-fade-up">
+      <h1 class="text-2xl sm:text-3xl md:text-5xl font-bold tracking-tight text-sky-800 animate-fade-up">
 
         Sistem Informasi PKL & UKK Industri
 
@@ -277,7 +277,7 @@
       </p>
 
       <!-- Slideshow Mobile -->
-      <div class="md:hidden mt-3 sm:mt-4 slideshow-container-mobile">
+      <div class="md:hidden mt-4 sm:mt-5 slideshow-container-mobile">
         <div class="relative">
           <div class="skeleton"></div>
           <img src="slide/IMG-20240305-WA0034-scaled.jpg" alt="Slide 1" class="active" loading="lazy" onload="this.previousElementSibling.style.display='none'">
@@ -312,14 +312,14 @@
         </div>
       </div>
       <div class="md:hidden slideshow-dots-mobile">
-        <span class="dot active" onclick="currentSlideMobile(1)"></span>
-        <span class="dot" onclick="currentSlideMobile(2)"></span>
-        <span class="dot" onclick="currentSlideMobile(3)"></span>
-        <span class="dot" onclick="currentSlideMobile(4)"></span>
-        <span class="dot" onclick="currentSlideMobile(5)"></span>
-        <span class="dot" onclick="currentSlideMobile(6)"></span>
-        <span class="dot" onclick="currentSlideMobile(7)"></span>
-        <span class="dot" onclick="currentSlideMobile(8)"></span>
+        <span class="dot active" onclick="currentSlideMobile(1)" style="height: 8px; width: 8px; margin: 0 2px;"></span>
+        <span class="dot" onclick="currentSlideMobile(2)" style="height: 8px; width: 8px; margin: 0 2px;"></span>
+        <span class="dot" onclick="currentSlideMobile(3)" style="height: 8px; width: 8px; margin: 0 2px;"></span>
+        <span class="dot" onclick="currentSlideMobile(4)" style="height: 8px; width: 8px; margin: 0 2px;"></span>
+        <span class="dot" onclick="currentSlideMobile(5)" style="height: 8px; width: 8px; margin: 0 2px;"></span>
+        <span class="dot" onclick="currentSlideMobile(6)" style="height: 8px; width: 8px; margin: 0 2px;"></span>
+        <span class="dot" onclick="currentSlideMobile(7)" style="height: 8px; width: 8px; margin: 0 2px;"></span>
+        <span class="dot" onclick="currentSlideMobile(8)" style="height: 8px; width: 8px; margin: 0 2px;"></span>
       </div>
 
       <!-- Slideshow Desktop -->
@@ -377,60 +377,60 @@
   </header>
 
   <!-- Statistics Section (Below Slideshow) - Compact Promo Style -->
-  <section class="mx-auto max-w-6xl px-3 sm:px-4 py-3 sm:py-4">
-    <div class="grid grid-cols-2 md:grid-cols-4 gap-2 sm:gap-3" id="statsContainer">
+  <section class="mx-auto max-w-6xl px-3 sm:px-4 py-2 sm:py-3">
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-1.5 sm:gap-3" id="statsContainer">
       <!-- Peserta Card -->
-      <div class="rounded-lg bg-gradient-to-br from-emerald-50 to-emerald-100 border border-emerald-200 p-3 sm:p-4 shadow-sm hover:shadow-md transition-shadow relative stat-card" id="card-peserta">
+      <div class="rounded-lg bg-gradient-to-br from-emerald-50 to-emerald-100 border border-emerald-200 p-2 sm:p-4 shadow-sm hover:shadow-md transition-shadow relative stat-card" id="card-peserta">
         <div class="skeleton absolute inset-0 rounded-lg opacity-50"></div>
-        <div class="flex items-center gap-2 sm:gap-3 relative z-10">
-          <div class="h-8 sm:h-10 w-8 sm:w-10 rounded-lg bg-gradient-to-br from-emerald-400 to-emerald-600 flex items-center justify-center text-white flex-shrink-0">
-            <i data-lucide="users" class="w-4 sm:w-5 h-4 sm:h-5"></i>
+        <div class="flex items-center gap-1.5 sm:gap-3 relative z-10">
+          <div class="h-7 sm:h-10 w-7 sm:w-10 rounded-lg bg-gradient-to-br from-emerald-400 to-emerald-600 flex items-center justify-center text-white flex-shrink-0">
+            <i data-lucide="users" class="w-3.5 sm:w-5 h-3.5 sm:h-5"></i>
           </div>
           <div class="min-w-0">
-            <p class="text-xl sm:text-2xl md:text-3xl font-bold text-emerald-700" id="stat-peserta"></p>
-            <p class="text-xs text-emerald-700 font-medium">Peserta PKL</p>
+            <p class="text-lg sm:text-2xl md:text-3xl font-bold text-emerald-700" id="stat-peserta"></p>
+            <p class="text-[10px] sm:text-xs text-emerald-700 font-medium">Peserta</p>
           </div>
         </div>
       </div>
 
       <!-- Pembimbing Card -->
-      <div class="rounded-lg bg-gradient-to-br from-sky-50 to-sky-100 border border-sky-200 p-3 sm:p-4 shadow-sm hover:shadow-md transition-shadow relative stat-card" id="card-pembimbing">
+      <div class="rounded-lg bg-gradient-to-br from-sky-50 to-sky-100 border border-sky-200 p-2 sm:p-4 shadow-sm hover:shadow-md transition-shadow relative stat-card" id="card-pembimbing">
         <div class="skeleton absolute inset-0 rounded-lg opacity-50"></div>
-        <div class="flex items-center gap-2 sm:gap-3 relative z-10">
-          <div class="h-8 sm:h-10 w-8 sm:w-10 rounded-lg bg-gradient-to-br from-sky-400 to-sky-600 flex items-center justify-center text-white flex-shrink-0">
-            <i data-lucide="book-open" class="w-4 sm:w-5 h-4 sm:h-5"></i>
+        <div class="flex items-center gap-1.5 sm:gap-3 relative z-10">
+          <div class="h-7 sm:h-10 w-7 sm:w-10 rounded-lg bg-gradient-to-br from-sky-400 to-sky-600 flex items-center justify-center text-white flex-shrink-0">
+            <i data-lucide="book-open" class="w-3.5 sm:w-5 h-3.5 sm:h-5"></i>
           </div>
           <div class="min-w-0">
-            <p class="text-xl sm:text-2xl md:text-3xl font-bold text-sky-700" id="stat-pembimbing"></p>
-            <p class="text-xs text-sky-700 font-medium">Pembimbing</p>
+            <p class="text-lg sm:text-2xl md:text-3xl font-bold text-sky-700" id="stat-pembimbing"></p>
+            <p class="text-[10px] sm:text-xs text-sky-700 font-medium">Pembimbing</p>
           </div>
         </div>
       </div>
 
       <!-- Penguji Card -->
-      <div class="rounded-lg bg-gradient-to-br from-teal-50 to-teal-100 border border-teal-200 p-3 sm:p-4 shadow-sm hover:shadow-md transition-shadow relative stat-card" id="card-penguji">
+      <div class="rounded-lg bg-gradient-to-br from-teal-50 to-teal-100 border border-teal-200 p-2 sm:p-4 shadow-sm hover:shadow-md transition-shadow relative stat-card" id="card-penguji">
         <div class="skeleton absolute inset-0 rounded-lg opacity-50"></div>
-        <div class="flex items-center gap-2 sm:gap-3 relative z-10">
-          <div class="h-8 sm:h-10 w-8 sm:w-10 rounded-lg bg-gradient-to-br from-teal-400 to-teal-600 flex items-center justify-center text-white flex-shrink-0">
-            <i data-lucide="check-circle" class="w-4 sm:w-5 h-4 sm:h-5"></i>
+        <div class="flex items-center gap-1.5 sm:gap-3 relative z-10">
+          <div class="h-7 sm:h-10 w-7 sm:w-10 rounded-lg bg-gradient-to-br from-teal-400 to-teal-600 flex items-center justify-center text-white flex-shrink-0">
+            <i data-lucide="check-circle" class="w-3.5 sm:w-5 h-3.5 sm:h-5"></i>
           </div>
           <div class="min-w-0">
-            <p class="text-xl sm:text-2xl md:text-3xl font-bold text-teal-700" id="stat-penguji"></p>
-            <p class="text-xs text-teal-700 font-medium">Penguji PKL</p>
+            <p class="text-lg sm:text-2xl md:text-3xl font-bold text-teal-700" id="stat-penguji"></p>
+            <p class="text-[10px] sm:text-xs text-teal-700 font-medium">Penguji</p>
           </div>
         </div>
       </div>
 
       <!-- Mitra Card -->
-      <div class="rounded-lg bg-gradient-to-br from-orange-50 to-orange-100 border border-orange-200 p-3 sm:p-4 shadow-sm hover:shadow-md transition-shadow relative stat-card" id="card-mitra">
+      <div class="rounded-lg bg-gradient-to-br from-orange-50 to-orange-100 border border-orange-200 p-2 sm:p-4 shadow-sm hover:shadow-md transition-shadow relative stat-card" id="card-mitra">
         <div class="skeleton absolute inset-0 rounded-lg opacity-50"></div>
-        <div class="flex items-center gap-2 sm:gap-3 relative z-10">
-          <div class="h-8 sm:h-10 w-8 sm:w-10 rounded-lg bg-gradient-to-br from-orange-400 to-orange-600 flex items-center justify-center text-white flex-shrink-0">
-            <i data-lucide="briefcase" class="w-4 sm:w-5 h-4 sm:h-5"></i>
+        <div class="flex items-center gap-1.5 sm:gap-3 relative z-10">
+          <div class="h-7 sm:h-10 w-7 sm:w-10 rounded-lg bg-gradient-to-br from-orange-400 to-orange-600 flex items-center justify-center text-white flex-shrink-0">
+            <i data-lucide="briefcase" class="w-3.5 sm:w-5 h-3.5 sm:h-5"></i>
           </div>
           <div class="min-w-0">
-            <p class="text-xl sm:text-2xl md:text-3xl font-bold text-orange-700" id="stat-mitra"></p>
-            <p class="text-xs text-orange-700 font-medium">Mitra Industri</p>
+            <p class="text-lg sm:text-2xl md:text-3xl font-bold text-orange-700" id="stat-mitra"></p>
+            <p class="text-[10px] sm:text-xs text-orange-700 font-medium">Mitra</p>
           </div>
         </div>
       </div>
